2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/ajax/agent.php: fixed the return of call ajax, now it haven't
	html entities.
	
	Fixes: #3174872

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* ChangeLog: Change the number of item in tracker in previus commit. Sorry
	I have a mistake.  

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* godmode/agentes/agent_manager.php: fixed the return of ajax call to
	search parents, now the agent names is without html entities.
	
	Fixes: #3174918

2011-02-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php: Fixed the group maps
	when the root group has not agents. Bug: 3152679
	Merged from trunk

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* godmode/reporting/visual_console_builder.elements.php: fixed the show
	icons for "label" and "icon", show tooltip on the type icons, hidde some
	fields as type of row. And now the image field show to icon type item and
	of course update too.
	
	Fixes: #3188080

2011-02-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_ui.php: Lost commit from trunk. Modified function
	printTruncateText function.

	Fixes: #3175780  

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* godmode/reporting/visual_console_builder.editor.js: fixed the update the
	items, now don't change the position if the data haven't the position.
	
	Fixes: #3188069

2011-02-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/modificar_agente.php: Lost commit from trunk. Truncated
	agent name in this view.

	Fixes: #3175780

2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_db.php: added in function "get_group_agents" the
	parameter "$childGroups" for get the child groups. And in the function