@@ -2,6 +2,15 @@
 
 	Merged bugfix from trunk.
 
+	* include/styles/pandora.css, godmode/servers/modificar_server.php: added
+	lost icons in the legend of servers.
+	
+	Fixes: #3174880
+
+2011-02-21 Miguel de Dios  <miguel.dedios@artica.es>
+
+	Merged bugfix from trunk.
+
 	* include/ajax/agent.php: fixed the return of call ajax, now it haven't
 	html entities.
 	
